MyDev/hello-message-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-message-app-deployment-v1
spec:
 replicas: 1
 selector:
  matchLabels:
    app: hello-message-app
 template: # template for the pods
  metadata:
    labels:
      app: hello-message-app
      version: v1
  spec:
    containers:
      - name: hello-message-app
        image: pmusale/kubecanary:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 8888

---

apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-message-app-deployment-v2
spec:
 replicas: 1
 selector:
  matchLabels:
    app: hello-message-app
 template: # template for the pods
  metadata:
    labels:
      app: hello-message-app
      version: v2
  spec:
    containers:
      - name: hello-message-app
        image: pmusale/kubecanary:2.0
        imagePullPolicy: Always
        ports:
          - containerPort: 8888

---

apiVersion: v1
kind: Service
metadata:
 name: hello-message-app
 labels:
  app: hello-message-app
spec:
 ports:
 - port: 8888
   name: http
 selector:
    app: hello-message-app
 type: ClusterIP
