MyDev/kube-canary-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: kube-canary-app-deployment-v1
spec:
 replicas: 1
 selector:
  matchLabels:
    app: kube-canary-app
 template: # template for the pods
  metadata:
    labels:
      app: kube-canary-app
      version: v1
  spec:
    containers:
      - name: kube-canary-app
        image: pmusale/istiocanary:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
           
---

apiVersion: v1
kind: Service
metadata:
 name: kube-canary-app
 labels:
  app: kube-canary-app
spec:
  ports:
    - port: 8080
      name: http
  selector:
   app: kube-canary-app
