MyDev/helloworld-ingress.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      k8s-app: web
  template:
    metadata:
      labels:
        k8s-app: web
    spec:
      containers:
        - name: web
          image: infrastructureascode/hello-world
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP

---
kind: Service
apiVersion: v1
metadata:
  name: web
spec:
  ports:
    - port: 443
      targetPort: 8080
  selector:
    k8s-app: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 443
