MyDev/istio-config.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: istio-canary-gateway
spec:
 selector:
  istio: ingressgateway # use istio default controller
 servers:
 - port:
    number: 80
    name: http
    protocol: HTTP
   hosts:
     - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: "kube-canary-app"
spec:
 hosts:
  - "*"
 gateways:
  - "istio-canary-gateway"
 http:
 - route:
   - destination:
      host: "kube-canary-app"
      port:
        number: 8080

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
 name: "hello-message-app"
spec:
 hosts:
  - "hello-message-app"
 http:
 - route:
   - destination:
      host: "hello-message-app"
      port:
        number: 8888
      subset: v1
     weight: 90
   - destination:
      host: "hello-message-app"
      port:
        number: 8888
      subset: v2
     weight: 10

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
 name: hello-message-app
spec:
  host: "hello-message-app"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
