MyDev/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: docker.io/mihaibob/keycloak:18.0.0-legacy
        ports:
        - name: "http"
          protocol: TCP
          containerPort: 8080
        - name: "https"
          protocol: TCP
          containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak  
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-buffer-size: "12k"
  name: keycloak-ingress
  labels:
    app: keycloak
spec:
  tls:
  - hosts:
    - cfs-lending.myvnc.com
    secretName: letsencrypt-keycloak-certificate-secret
  rules: 
    # https://cfs-lending.myvnc.com/lending/auth/
    # https://cfs-lending.myvnc.com/lending/auth/admin/master/console/
    # https://cfs-lending.myvnc.com/lending/auth/realms/master/account/#/
    - host: cfs-lending.myvnc.com
      http:
        paths:
          - path: "/lending/(.*)"
            pathType: ImplementationSpecific
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
