MyDev/phpmyadmin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: arm64v8/phpmyadmin:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    app: phpmyadmin
spec:
  type: ClusterIP
  selector:
    app: phpmyadmin
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    app: phpmyadmin
spec: 
  tls:
    - hosts:
      - cfs-lending.myvnc.com
      secretName: letsencrypt-phpmyadmin-certificate-secret
  rules: 
    - host: cfs-lending.myvnc.com
      http:
        paths:
          - path: /phpmyadmin(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 80
